<resources>
    <string name="app_name">Coffee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--  BottomBar Navigation Start -->
    <string name="index">首页</string>
    <string name="map">地图</string>
    <string name="love">关注</string>
    <string name="person">个人</string>
    <!-- BottomBar Navigation End-->

    <!-- DrawerLayout Start -->
    <!-- About tab -->
    <string name="about_developers_label">Main developers</string>
    <string name="about_translator_label">Translator</string>
    <string name="changelog">Changelog</string>
    <string name="translator"></string>
    <string name="about_version_label">Version</string>
    <string name="about_source_label">Source code</string>
    <string name="about_libraries_label">Used libraries</string>

    <!-- Navigation -->
    <string name="nav_geometry">Geometry</string>
    <string name="nav_about">About</string>
    <string name="nav_reward">Material Design </string>
    <string name="nav_bank">Nearest Bank</string>
    <string name="nav_tips">Recycler Tips</string>


    <string name="details">Details</string>
    <string name="version_app">1.0.0</string>
    <string name="tips">
        1. Pilah Sampah berdasarkan kategorinya organik / anorganik \n\n
        2. Kreasikan sampah tersebut menjadi barang yang dapat digunakan kembali\n\n
        3. Dan anda bisa promosikan atau menjual ke teman anda\n\n
        4. Anda bisa saja mengirimkan sampah anda ke bank sampah terdekat melalui samita agar dapat diproses
    </string>
    <string name="layout">Layout</string>
    <string name="deskripsi">A rose is a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears. There are over a hundred species and thousands of cultivars. They form a group of plants that can be erect shrubs.</string>
    <string name="nav_home">Home</string>

    <string name="aboutme">UX / UI Mobile Application\nFront-End Android Developer</string>
    <!-- DrawerLayout End -->

    <!-- Banner Start -->
    <string name="Coffee">this is new coffee</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Banner End -->

    <!--Index LinearLayout Start-->
    <string name="indexHome">&#xe665;</string>
    <string name="Love">&#xe643;</string>
    <string name="Me">&#xe60d;</string>
    <string name="FCoffee">&#xe63d;</string>
    <!--   Index LinearLayout End -->


    <!-- Login Register Start-->
    <string name="password">Password:</string>
    <string name="username">UserName:</string>
    <string name="reg_user">UserName</string>
    <string name="reg_password">Password:</string>
    <string name="reg_pwd_again">Confirm：</string>
    <string name="register">注册</string>
    <string name="login">&#160;&#160;&#160;登录&#160;&#160;&#160;</string>
    <!-- Login Register End -->


    <!-- Map ImageView Start-->
    <string name="line">line</string>
    <string name="kabuqinuo">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;卡布奇诺是一种加入以同量的意大利特浓咖啡和蒸汽泡沫牛奶相混合的意大利咖啡。</string>
    <string name="natie">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;拿铁咖啡是意大利浓缩咖啡(Espresso)与牛奶的经典混合，意大利人也很喜欢把拿铁作为早餐的饮料。</string>
    <string name="meigui">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;玫瑰咖啡是曼巴咖啡与鲜奶油的碰撞，在表面再加上一片干的玫瑰花。</string>
    <string name="moka">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;摩卡咖啡（CafeMocha）是一种最古老的咖啡，其历史要追溯到咖啡的起源。它是由意大利浓缩咖啡、巧克力酱、鲜奶油和牛奶混合而成，摩卡得名于有名的摩卡港。</string>
    <string name="title_activity_sharedcoffee">sharedcoffee</string>
</resources>
