<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        tools:context=".MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gra_gray"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />





        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/activity_main"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:context="org.starrier.coffee.MainActivity">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">


                <FrameLayout
                    android:id="@+id/mFragment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                </FrameLayout>

                <RadioGroup
                    android:layout_marginBottom="2dp"
                    android:id="@+id/mRadioGroup"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingTop="5dp"
                    android:background="@drawable/border_top">
                    <RadioButton
                        android:textSize="45dp"
                        android:button="@null"
                        android:textColor="@drawable/text_selector"
                        android:id="@+id/rb_index"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:text="@string/indexHome"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                         />

                    <RadioButton
                        android:textSize="45dp"
                        android:button="@null"
                        android:textColor="@drawable/text_selector"
                        android:id="@+id/rb_map"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:text="@string/FCoffee"
                        android:layout_weight="1"
                        android:layout_height="44dp"
                        />

                    <RadioButton
                        android:textSize="45dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="20dp"                        android:button="@null"
                        android:textColor="@drawable/text_selector"
                        android:id="@+id/rb_love"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:text="@string/Love"
                        android:layout_weight="1"
                        />

                    <RadioButton
                        android:textSize="45dp"
                        android:button="@null"
                        android:textColor="@drawable/text_selector"
                        android:id="@+id/rb_person"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:text="@string/Me"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        />
                </RadioGroup>
            </LinearLayout>




        </RelativeLayout>

    </FrameLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:clickable="true"
        android:clipToPadding="false"
        android:layout_gravity="start"
        android:elevation="4dp"
        app:insetForeground="#44383838"
        app:itemBackground="@drawable/menu_background_color"
        app:itemIconTint="@color/menu_icon_color"
        app:itemTextColor="@color/menu_text_color"
        app:menu="@menu/activity_main_drawer"
        app:headerLayout="@layout/header"
        android:paddingLeft="16dp" />
</android.support.v4.widget.DrawerLayout>