<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"

    tools:context="org.starrier.coffee.fragment.IndexFragment">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_marginTop="65dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="103dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/kabuqinuo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="103dp">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="105dp"

                android:text="@string/kabuqinuo" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/line"
            android:contentDescription="@string/line"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="103dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/moka" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="103dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="105dp"

                android:text="@string/moka" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/line"
            android:contentDescription="@string/line"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="46dp"
            android:layout_height="103dp"
            android:layout_weight="1"
            android:src="@drawable/about" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="105dp"
            android:layout_weight="2"
            android:text="TextView" />


    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="103dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/natie" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="103dp">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="105dp"

                android:text="@string/natie" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/line"
            android:contentDescription="@string/line"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="46dp"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:src="@drawable/about" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:layout_weight="2"
                android:text="TextView" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="103dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/meigui" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="103dp">
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:text="@string/meigui" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/line"
            android:contentDescription="@string/line"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="46dp"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:src="@drawable/about" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:layout_weight="2"
                android:text="TextView" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>