<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/loginback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Login_background"
    android:orientation="vertical"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="528dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="150dp">


            <TextView

                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/username"
                android:textColor="#CD853F"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView"
                android:layout_alignBottom="@+id/textView"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:cursorVisible="false"
                android:gravity="center_horizontal"
                android:singleLine="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="210dp">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="17dp"
                android:cursorVisible="false"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:singleLine="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/relativeLayout"
            android:layout_alignBottom="@+id/relativeLayout"
            android:layout_alignStart="@+id/relativeLayout"
            android:text="@string/password"
            android:textColor="#CD853F"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="65dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relativeLayout"
            android:layout_marginTop="39dp"
            android:background="@drawable/shape_credit_score"
            android:text="@string/login"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView5"
            android:layout_below="@+id/relativeLayout5"
            android:layout_marginTop="73dp"
            android:gravity="center"
            android:text="SecondCup"
            android:textColor="#CD853F"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView10"
            android:layout_below="@+id/button"
            android:layout_marginEnd="11dp"
            android:layout_marginTop="58dp"
            android:text="------社交账号直接登录------" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/textView2"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="11dp"
            android:background="@drawable/weibo" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/imageView5"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/imageView5"
            android:background="@drawable/qq" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/textView4"
            android:layout_alignTop="@+id/imageView7"
            android:background="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/imageView8"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@+id/imageView8"
            android:background="@drawable/weixin" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_toEndOf="@+id/imageView5"
            android:text="| 随便看看  |  登录遇到问题" />

        <Button
            android:id="@+id/button2"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/textView10"
            android:background="@drawable/registerlogin"
            android:text="注册" />

    </RelativeLayout>
</LinearLayout>